Add Tou Yang text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>    
   <head>
-    <title>Github Page</title>
+    <title>Prime Academy Application Submission</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   
   <body>
+    <h1>Tou Yang </>
     <p>That should get you started</p>
   </body>
+  
   </html>
   
