--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   
   <body>
     <h1>Tou Yang</>
+    <h2>448 Labor Rd</>
+    <h2>Little Canada, MN 55117</h2>
+  
     <p>That should get you started</p>
   </body>
   
