--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   
   <body>
-    <h1>Tou Yang</>
-    <h2>448 Labor Rd</>
+    <h1>Tou Yang</h1>
+    <h2>448 Labor Rd</h2>
     <h2>Little Canada, MN 55117</h2>
   
     <p>That should get you started</p>
