--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   
   <body>
     <h1>Tou Yang</h1>
-    <h3>448 Labor Rd</h3>
-    <h3>Little Canada, MN 55117</h3>
-    <h3>952-381-4698</h3>
+    <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
+    <h3>Phone: 952-381-4698</h3>
   
     <p>That should get you started</p>
   </body>
