--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
     <h3>Phone: 952-381-4698</h3>
   
-    <p>That should get you started</p>
+    <p>Highly self-motived individual. A dedicated person to accomplish goals and the grit to finish anything put in front of him.</p>
   </body>
   
   </html>
