--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </style>
   
   <body>
+  <div class="container">
   <div class="header">  
     <h1>Tou Yang</h1>
     <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
@@ -74,6 +75,6 @@
     
       
   </body>
-  
+  </div>
   </html>
   
