--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   
   <body>
-  <div class="container">
+  <div id="container">  
   <div class="header">  
     <h1>Tou Yang</h1>
     <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
@@ -74,7 +74,7 @@
       <li>Rough Notes Insurance Magazine</li>
       <li>Insurance Thought Leadership</li>
     
-  </div>
+  </div id="container">
   </body>
  
   </html>
