--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   
   <body>
   <div id="container">  
-  <div class="header">  
-    <h1>Tou Yang</h1>
-    <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
-    <h3>Phone: 952-381-4698</h3>
+    <div id="header">  
+      <h1>Tou Yang</h1>
+      <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
+      <h3>Phone: 952-381-4698</h3>
     
   
-    <p>Highly self-motived individual. A dedicated person to accomplish goals and the grit to finish anything put in front of him.</p>
-  </div>
+      <p>Highly self-motived individual. A dedicated person to accomplish goals and the grit to finish anything put in front of him.</p>
+    </div>
     
     <h1>Professional Experience</h1>
     <h2>Agent Ave</h2>
