--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
   <div id="container">  
-    <div id="header">  
+    <div class="header">  
       <h1>Tou Yang</h1>
       <h3>Address: 448 Labor Rd., Little Canada, MN 55117</h3>
       <h3>Phone: 952-381-4698</h3>
