--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <li>Quoting, bind coverages and sales</li>
      </ul>
     
+ <div id="other">   
    <h3>Education:</h3>
     <h4>University of Wisconsin - Green Bay</h4>
     <h4>Bachelor of Business Administration</h4>
@@ -73,6 +74,7 @@
       <li>Insurance Nerds Podcast</li>
       <li>Rough Notes Insurance Magazine</li>
       <li>Insurance Thought Leadership</li>
+ </div>
     
   </div id="container">
   </body>
