--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <h4>University of Wisconsin - Green Bay</h4>
     <h4>Bachelor of Business Administration</h4>
     <h5>2000-2004</h5>
-  </div> id"education">
+  </div>
     
 <div id="organization">          
   <h3>Organization:</h3>
     <h4>Northwest MPLS United Methodist Hmong Ministry</h4>
     <h5>December 2016 - Present</h5>
- </div> id="organization">
+ </div> 
     
   <h3>Publications:</h3>
     <ul>
