--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h4>Phone: 952-381-4698</h4>
     
   
-      <p>Highly self-motived individual. A dedicated person to accomplish goals and the grit to finish anything put in front of him.</p>
+      <p>Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
     </div>
      
       <h2>Professional Experience</h2>
@@ -29,7 +29,7 @@
       <h4>Co-founder</h4>
       <h4>June 2014 - Present</h4>
       <ul>
-        <li>Created and shipped the first B2B SaaS carrier productivity solution for independent insurance agents from scratch</li>
+        <li>Developed and shipped the first B2B SaaS carrier productivity solution for independent insurance agents from scratch</li>
         <li>Scaled Agent Ave to insurance agencies all across the country</li>
         <li>Demoing platform to prospects and customer on-boarding</li>
         <li>Prospecting and closing sales</li>
