--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <li>Quoting, bind coverages and sales</li>
      </ul>
     
- <div id="education">   
+ <div class="education">   
    <h4>Education:</h4>
     <h5>University of Wisconsin - Green Bay</h5>
     <h5>Bachelor of Business Administration</h5>
     <h5>2000-2004</h5>
   </div>
     
-<div id="organization">          
+<div class="organization">          
   <h4>Organization:</h4>
     <h5>Northwest MPLS United Methodist Hmong Ministry</h5>
     <h5>December 2016 - Present</h5>
