--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   
   <body>
-  <div class="container">  
+  <div id="container">  
     <div class="header">  
       <h1>Tou Yang</h1>
       <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4>
@@ -79,7 +79,7 @@
       <li>Insurance Thought Leadership</li>
  </div>
     
-  </div class="container">
+  </div id="container">
   </body>
  
   </html>
