--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <h1>Tou Yang</h1>
       <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4>
       <h4>Phone: 952-381-4698</h4>
+      <img src= "Tou.jpg">
     
     </div>
       <p>Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
