--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   <div id="container">  
     <div class="header">  
       <h1>Tou Yang</h1>
-      <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4>
+      <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4> <img src = "images/Tou.jpg">
       <h4>Phone: 952-381-4698</h4>
-      <img src = "Tou.jpg">
     
     </div>
       <p>Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
