--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="container">  
     <div class="header">  
       <h1>Tou Yang</h1>
-      <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4> <img src = "images/Tou.jpg"/>
+      <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4> <img src = "Tou.jpg"/>
       <h4>Phone: 952-381-4698</h4>
     
     </div>
