--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="container">
      <h1>Tou Yang</h1>
     <div class="header">  
-      <img src = "https://media.licdn.com/dms/image/C4D03AQGOnuCxGDBzmw/profile-displayphoto-shrink_200_200/0?e=1529582400&v=beta&t=LYMqZmZQVyD3PW2b5G8hxa6d6vw_4cZWFxSDUq7-9r4"/> style = "float: right"/>
+      <img src = "https://media.licdn.com/dms/image/C4D03AQGOnuCxGDBzmw/profile-displayphoto-shrink_200_200/0?e=1529582400&v=beta&t=LYMqZmZQVyD3PW2b5G8hxa6d6vw_4cZWFxSDUq7-9r4"/> 
       <h4>Address: 448 Labor Rd., Little Canada, MN 55117</h4> 
       <h4>Phone: 952-381-4698</h4>
       
