--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     
   <div class="profile">
-      <p>Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
+      <p class="profile-quote">Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
     </div>
      
       <h2>Professional Experience</h2>
