--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     
   <div class="profile">
-      <p class="profile-quote">Highly self-motived individual with a dedicated to accomplish any goal and the grit to finish anything put in front of him.</p>
+      <p class="profile-quote">Highly self-motived, passionate individual with a dedication to accomplish set goal and the grit to push through any obstacle. A team player that understands success is based on the sum of all parts</p>
     </div>
      
       <h2>Professional Experience</h2>
